--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "web-vitals": "^3.1.0"
   }
 }
